infra/k8s/frontend/001-dev/001-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fk-frontend-staging
spec:
  selector:
    matchLabels:
      app: fk-frontend-staging
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: fk-frontend-staging
    spec:
      containers:
      - name: fk-frontend-staging
        image: toresbe/fk-frontend:latest
        imagePullPolicy: Always
        ports:
          - name: web
            containerPort: 3000
