infra/k8s/frontend/001-dev/002-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: fk-frontend-staging
spec:
  type: ClusterIP
  selector:
    app: fk-frontend-staging
  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - protocol: TCP
      port: 3000
      name: web
