infra/k8s/frontend/001-dev/003-ingress.yaml
---
#kind: IngressRoute
#apiVersion: traefik.containo.us/v1alpha1
#metadata:
#  name: fk-frontend-http
#  namespace: default
#spec:
#  entryPoints: 
#    - web
#  routes:
#  - match: Host(`beta.frikanalen.no`) 
#    kind: Rule
#    middlewares:
#      - name: scheme-redirect
#    services:
#      - name: dummy
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: fk-frontend-https-redir
  namespace: default
spec:
  entryPoints: 
    - web
  middlewares:
    - name: scheme-redirect
  routes:
  - match: Host(`beta.frikanalen.no`) 
    kind: Rule
    services:
    - kind: Service
      name: fk-frontend-staging
      scheme: http
      port: 3000
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: fk-frontend-https
  namespace: default
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`beta.frikanalen.no`) 
    kind: Rule
    services:
    - kind: Service
      name: fk-frontend-staging
      scheme: http
      port: 3000
  tls:
    certResolver: default
